# bridge-rs

./: .gitignore  Cargo.toml  Rocket.toml
actix/: Cargo.toml
actix/src/: main.rs  result.rs
actix/src/db/: mongo.rs
actix/src/db/models/: comment.rs  deal.rs  exercise.rs  mod.rs  session.rs  user.rs
actix/src/models/: user.rs
actix/src/server/: auth.rs  mod.rs
actix/src/server/routes/: account.rs  exercise.rs  mod.rs  test.rs  user.rs
api/: .gitignore  Cargo.toml  Rocket.toml  queries.restclient
api/migrations/2019-01-07-212751_users_create/: up.sql
api/migrations/2019-01-08-194002_tokens_create/: up.sql
api/migrations/2019-01-09-163508_deals_create/: up.sql
api/migrations/2019-01-09-163653_exercises_create/: up.sql
api/migrations/2019-01-09-163812_exercise_bids_create/: down.sql  up.sql
api/migrations/2019-01-09-220057_users_add_password_hash/: down.sql  up.sql
api/migrations/2019-01-09-231847_users_make_email_unique/: up.sql
api/migrations/2019-01-10-231153_exercise_bids_add_created/: down.sql  up.sql
api/migrations/2019-01-11-141010_exercises_add_parent_id_and_created/: down.sql  up.sql
api/migrations/2019-01-11-222919_users_add_last_active/: down.sql  up.sql
api/migrations/2019-01-12-164339_comments_create/: up.sql
api/migrations/2019-01-23-030659_comments_change_fk_exercises/: down.sql  up.sql
api/src/: main.rs  schema.rs
api/src/models/: auth.rs  bridge.rs  mod.rs
bridge/: Cargo.toml
bridge/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs  tests.rs
migrations/2018-12-07-174347_create_hands/: down.sql  up.sql
migrations/2018-12-07-214517_change_hands_deals/: up.sql
migrations/2018-12-09-143810_create_exercise_bids/: down.sql
migrations/2018-12-09-152931_create_current_user/: up.sql
migrations/2018-12-10-171305_exercise_bids_add_user_id/: down.sql
migrations/2018-12-12-025416_deals_include_all_hands/: down.sql
src/: lib.rs  main.rs
src/bidding/: mod.rs
webclient/: Makefile  config-overrides.js  package.json
(+50 files in other folders)
