[package]
name = "bridge-actix"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bridge-core = { path = "../core" }

mongodb = "0.9"
bson = "0.14"

actix-web = "2"
actix-rt = "1"
actix-service = "1"
actix-http = "1"

env_logger = "*"
dotenv = "0.15"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

futures = "0.3.4"
bcrypt = "0.6"
rand = "0.7"
chrono = "0.4"